# abstract-vm

./: .clang-format  .gitignore  CMakeLists.txt  Makefile
src/: AbstractOperand.cpp  AbstractOperand.hpp  AssertionError.cpp  AssertionError.hpp  Div0Error.cpp  Div0Error.hpp  Double.cpp  Double.hpp  Float.cpp  Float.hpp  IException.hpp  IOperand.hpp  InstructionType.cpp  InstructionType.hpp  Int16.cpp  Int16.hpp  Int32.cpp  Int32.hpp  Int8.cpp  Int8.hpp  Interpreter.cpp  Interpreter.hpp  Line.cpp  Line.hpp  NumberParseError.cpp  NumberParseError.hpp  OperandFactory.cpp  OperandFactory.hpp  OperandType.cpp  OperandType.hpp  OverflowError.cpp  OverflowError.hpp  ParseError.cpp  ParseError.hpp  Parser.cpp  Parser.hpp  PrintError.cpp  PrintError.hpp  Stack.cpp  Stack.hpp  (+13 more)
tests/: bad-type-assert.avm  comments.avm  div0-float.avm  extra-double-semicolon.avm  float-precision.avm  idiv.avm  inf-div-float.avm  inf-overflow.avm  jkrause1.avm  modulo-float.avm  nan-input.avm  overflow-add-int16.avm  overflow-add-int32.avm  overflow-sub-int8.avm  overflow-sub2-int8.avm  print.avm  promote-floatdiv.avm  pushtest.avm  stack-empty-add.avm  subject.avm  syntax.dict
